--- a/app/views/mems/_form.html.erb
+++ b/app/views/mems/_form.html.erb
@@ -29,6 +29,13 @@
     </div>
     <%=f.error_span(:description) %>
   </div>
+  <div class="form-group">
+    <%= f.label :image, :class => 'control-label col-lg-2' %>
+    <div class="col-lg-10">
+      <%= f.file_field :image, :class => 'file_field' %>
+    </div>
+    <%=f.error_span(:description) %>
+  </div>
 
 
   <div class="form-group">
