--- a/app/views/mems/show.html.erb
+++ b/app/views/mems/show.html.erb
@@ -8,6 +8,9 @@
   <dd><%= @mem.name %></dd>
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @mem.description %></dd>
+  dt><strong><%= model_class.human_attribute_name(:image) %>:</strong></dt>
+  <dd><%= image_tag @mem.image.url(:medium) %></dd>
+  
 </dl>
 
 <%= link_to t('.back', :default => t("helpers.links.back")),
